--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: "3"
 
 networks:
   # 网络名称
@@ -12,7 +12,10 @@ services:
       context: ./nginx
       dockerfile: Dockerfile
     ports:
+#      - "7848:7848"
       - "8848:8848"
+      - "9848:9848"
+#      - "9849:9849"
     env_file:
       - ./env/nginx.env
     restart: always
@@ -22,9 +25,9 @@ services:
   nacos1:
     hostname: nacos1
     container_name: nacos1
-    image: nacos/nacos-server:${NACOS_VERSION:-v2.3.2-slim}
+    image: nacos/nacos-server:${NACOS_VERSION:-v2.1.0-slim}
     volumes:
-      - /docker-data/nacos-cluster/nacos1:/home/nacos/logs
+      - /docker-data/nacos-cluster/nacos1/logs/:/home/nacos/logs/
     #    ports:
     #      - "7848:7848"
     #      - "8848:8848"
@@ -44,9 +47,9 @@ services:
   nacos2:
     hostname: nacos2
     container_name: nacos2
-    image: nacos/nacos-server:${NACOS_VERSION:-v2.3.2-slim}
+    image: nacos/nacos-server:${NACOS_VERSION:-v2.1.0-slim}
     volumes:
-      - /docker-data/nacos-cluster/nacos2:/home/nacos/logs
+      - /docker-data/nacos-cluster/nacos2/logs/:/home/nacos/logs/
     env_file:
       - ./env/nacos-hostname.env
     restart: always
@@ -61,9 +64,9 @@ services:
   nacos3:
     hostname: nacos3
     container_name: nacos3
-    image: nacos/nacos-server:${NACOS_VERSION:-v2.3.2-slim}
+    image: nacos/nacos-server:${NACOS_VERSION:-v2.1.0-slim}
     volumes:
-      - /docker-data/nacos-cluster/nacos3:/home/nacos/logs
+      - /docker-data/nacos-cluster/nacos3/logs/:/home/nacos/logs/
     env_file:
       - ./env/nacos-hostname.env
     restart: always
@@ -77,10 +80,8 @@ services:
   mysql:
     container_name: nacos-mysql
     build:
-      #      context: ./mysql/5.7
       context: ./mysql/8
       dockerfile: Dockerfile
-    #    image: example/mysql:5.7
     env_file:
       - ./env/mysql.env
     volumes:
