--- a/nginx/nginx.template.conf
+++ b/nginx/nginx.template.conf
@@ -12,6 +12,19 @@ events {
     worker_connections  1024;
 }
 
+stream {
+    upstream nacos-cluster-grpc {
+        server      ${NACOS1}:9848;
+        server      ${NACOS2}:9848;
+        server      ${NACOS3}:9848;
+    }
+
+    server {
+        listen 9848;
+        proxy_pass nacos-cluster-grpc;
+    }
+}
+
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
@@ -43,10 +56,10 @@ http {
     gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
     # nacos集群地址
-    upstream nacos-cluster {
-        server      ${NACOS1};
-        server      ${NACOS2};
-        server      ${NACOS3};
+    upstream nacos-cluster-http {
+        server      ${NACOS1}:8848;
+        server      ${NACOS2}:8848;
+        server      ${NACOS3}:8848;
     }
 
     server {
@@ -56,7 +69,7 @@ http {
 
         # nacos集群代理
         location / {
-            proxy_pass http://nacos-cluster/;
+            proxy_pass http://nacos-cluster-http/;
         }
     }
 
