--- a/nginx/nginx.template.conf
+++ b/nginx/nginx.template.conf
@@ -12,19 +12,6 @@ events {
     worker_connections  1024;
 }
 
-stream {
-    upstream nacos-cluster-grpc {
-        server      ${NACOS1}:9848;
-        server      ${NACOS2}:9848;
-        server      ${NACOS3}:9848;
-    }
-
-    server {
-        listen 9848;
-        proxy_pass nacos-cluster-grpc;
-    }
-}
-
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
@@ -55,11 +42,36 @@ http {
     gzip_min_length 1000;
     gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
-    # nacos集群地址
+    # nacos集群地址http
     upstream nacos-cluster-http {
         server      ${NACOS1}:8848;
         server      ${NACOS2}:8848;
         server      ${NACOS3}:8848;
+    }
+
+    # nacos集群地址grpc
+    upstream nacos-cluster-grpc {
+        least_conn;
+        server ${NACOS1}:9848 max_fails=3 fail_timeout=30s;
+        server ${NACOS2}:9848 max_fails=3 fail_timeout=30s;
+        server ${NACOS3}:9848 max_fails=3 fail_timeout=30s;
+    }
+
+    server {
+        listen [::]:9848 ipv6only=off http2;
+
+        location / {
+            grpc_pass grpc://nacos-cluster-grpc;
+            error_page 502 = /error502grpc;
+        }
+
+        location = /error502grpc {
+            internal;
+            default_type application/grpc;
+            add_header grpc-status 14;
+            add_header content-length 0;
+            return 204;
+        }
     }
 
     server {
